# rust-birkana-http

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
conf/: Rocket.toml
src/: main.rs
static/css/: index.css
templates/: index.html.tera
