[package]
edition = '2018'
name = "rust-birkana-http"
version = "0.2.0"
authors = ["Lukas Nemec <lu.nemec@gmail.com>"]

[dependencies]
log = "*"
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-files = "0.1.1"
actix-session = "0.1.0"

tera = "0.11"
serde = "1.0"
serde_derive = "1.0"

futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"

rust-birkana = "1.1.2"
