[package]
edition = '2018'
name = "rust-birkana-http"
version = "0.3.0"
authors = ["Lukas Nemec <lu.nemec@gmail.com>"]

[dependencies]
log = "*"
actix-rt = "2.9.0"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-session = "0.9.0"

tera = "1.19.1"
serde = "1.0"
serde_derive = "1.0"

futures = "0.3.30"
env_logger = "0.11.3"
bytes = "1.6.0"
num_cpus = "1.0"

rust-birkana = "1.1.2"
